process: almost all statie file finish

--- a/前端路由设计.md
+++ b/前端路由设计.md
@@ -1,30 +1,98 @@
-可复用组件 - Select-menu
+# 前端路由设计
+1. 首页
+  - 路由`/recommend-resouce`，alias设置为`/`,即首页实际上渲染的是路由`/recommend-resouce`指定的内容
+  - 功能描述： 首页渲染推荐资源
+  - 组件
+    - header + main + aside
+    - main 和 aside 作为`router-view`部分，即根据路由渲染的部分 
+  - 可访问性
+    - 不需要登陆
 
-1. path: /     alias /recommend-resource
+2. 访问分类资源
+  - 路由`/classification`
+  - 功能描述： 首页分类资源默认为`计算机科学`资源，由用户根据点击分类对应按钮更新分类资源
+  - 组件
+    - header + main + aside
+    - main 和 aside 作为`router-view`部分，即根据路由渲染的部分 
+  - 可访问性
+    - 不需要登陆
 
-2. path: /recommend-resource
-    - component: Recommend-resources
+3. 关于我们
+  - 路由`/about-us`
+  - 功能描述： 路由到关于我们的页面
+  - 组件
+    - header + main + aside
+    - main 和 aside 作为`router-view`部分，即根据路由渲染的部分 
+  - 可访问性
+    - 不需要登陆
 
-3. path: /classification
-  - component: Classification-resources
+4. 搜索
+  - 路由`/search/:title`
+  - 功能描述： 路由到搜索页面，根据title参数返回搜索结果
+  - 组件
+    - header + main + aside
+    - main 和 aside 作为`router-view`部分，即根据路由渲染的部分 
+  - 可访问性
+    - 不需要登陆
 
-4. path: /about-us
-  - component: About-us
+5. 写文章
+  - 路由`/write`
+  - 功能描述： 路由新打开写文章的页面
+  - 组件
+    - 表单
+  - 可访问性
+    - 需要登陆
 
-5. path: /search/:title 
-  - component: Search-resourcess
+6. 个人中心
+  - 路由 `/users/:id`
+  - 功能描述： 用户访问个人中心或者访问其他用户个人中心
+  - 组件
+    - header+ main + userAside
+  - 可访问性
+    - 不需要登陆
 
-6. path: /write
-  - component: About-us
+  - 子路由
+    - 路由 `/users/:id/basic-info` 访问基础用户信息，alias为`/users/:id`
+    - 路由 `/users/:id/resources` 访问用户资源
+    - 路由 `/users/:id/collections` 访问用户收藏
 
-9. path: /users/:id
-  - component: Profile
+7. 设置
+  - 路由`/users/:id/settings`
+  - 功能描述： 路由打开个人信息的设置
+  - 组件
+    - header+main
+  - 可访问性
+    - 需要登陆
+  - 子路由
+    - 路由 `/users/:id/settings/profile`, alias是`/users/:id/settings`, 修改个人基本信息
+    - 路由 `/users/:id/settings/password`, alias是`/users/:id/settings`，修改用户密码
 
-10. path: /users/:id/resources
-  - component: User-resources
 
-11. path: /users/:id/collections
-  - component: User-collections
+8. 取得资源
+   - 路由`/resources/:id`
+   - 功能描述： 路由到对应资源的页面
+   - 组件
+     - header+main+resourcesAside
+   - 可访问性
+     - 不需要登陆
+
+9. 编辑文章
+   - 路由`/resources/:id`
+   - 功能描述： 路由到编辑资源的页面
+   - 组件
+     - 表单
+   - 可访问性
+     - 需要登陆，而且必须是作者本人
+
+10. 重置密码
+  - 路由 `/reset-password/:token`
+  - 功能描述： 路由到重置资源页面，
+  - 组件
+    - 表单
+  - 可访问性
+    - 需要token，token在页面中会提交回服务器进行验证，然后返回数据
+
+
 
 
 
